--- a/assets/assets.config.json
+++ b/assets/assets.config.json
@@ -67,5 +67,17 @@
   },
   "desgin4.png": {
     "mime": "image/png"
+  },
+  "Arrow 5.svg": {
+    "mime": "image/svg+xml"
+  },
+  "WorkkE1.svg": {
+    "mime": "image/svg+xml"
+  },
+  "WorkkE2.svg": {
+    "mime": "image/svg+xml"
+  },
+  "WorkkE3.svg": {
+    "mime": "image/svg+xml"
   }
 }
