testimonials and freq Sections Still sticy bug

--- a/assets/assets.config.json
+++ b/assets/assets.config.json
@@ -79,5 +79,14 @@
   },
   "WorkkE3.svg": {
     "mime": "image/svg+xml"
+  },
+  "p1.jpg": {
+    "mime": "image/jpeg"
+  },
+  "Comma.svg": {
+    "mime": "image/svg+xml"
+  },
+  "whiteBottomarrow.svg": {
+    "mime": "image/svg+xml"
   }
 }
